--- a/game4096/Classes/ViewControllers/HWGamePlayViewController.xib
+++ b/game4096/Classes/ViewControllers/HWGamePlayViewController.xib
@@ -20,15 +20,15 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Abr-Kt-mu4" userLabel="View ad">
-                    <rect key="frame" x="0.0" y="518" width="320" height="50"/>
+                    <rect key="frame" x="0.0" y="568" width="320" height="0.0"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                     <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="50" id="2K8-DK-Kpg"/>
+                        <constraint firstAttribute="height" id="2K8-DK-Kpg"/>
                     </constraints>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rfk-KT-Ghw" userLabel="View - playview">
-                    <rect key="frame" x="0.0" y="124" width="320" height="320"/>
+                    <rect key="frame" x="0.0" y="174" width="320" height="320"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                     <gestureRecognizers/>
@@ -43,7 +43,7 @@
                     </connections>
                 </view>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bjG-dD-reC">
-                    <rect key="frame" x="20" y="458" width="100" height="50"/>
+                    <rect key="frame" x="20" y="508" width="100" height="50"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
@@ -58,7 +58,7 @@
                     </connections>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="M2m-Tq-SX3">
-                    <rect key="frame" x="200" y="458" width="100" height="50"/>
+                    <rect key="frame" x="200" y="508" width="100" height="50"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
@@ -72,11 +72,11 @@
                         <action selector="undoTapped:" destination="-1" eventType="touchUpInside" id="PeO-Au-DM7"/>
                     </connections>
                 </button>
-                <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AdU-ke-FMn">
-                    <rect key="frame" x="20" y="50" width="280" height="50"/>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AdU-ke-FMn">
+                    <rect key="frame" x="20" y="114" width="280" height="50"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <subviews>
-                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="99999" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Yb9-9n-XDn" userLabel="Label - Score">
+                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="99999" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="Yb9-9n-XDn" userLabel="Label - Score">
                             <rect key="frame" x="0.0" y="20" width="100" height="30"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <constraints>
@@ -86,7 +86,7 @@
                             <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="99999" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sSF-8X-ywL" userLabel="Label - Best">
+                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="99999" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="sSF-8X-ywL" userLabel="Label - Best">
                             <rect key="frame" x="180" y="20" width="100" height="30"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <constraints>
@@ -96,7 +96,7 @@
                             <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Score" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Wc9-N8-j94">
+                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Score" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Wc9-N8-j94">
                             <rect key="frame" x="0.0" y="0.0" width="100" height="20"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <constraints>
@@ -107,7 +107,7 @@
                             <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Best Score" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="D0v-lF-MCR">
+                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Best Score" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="D0v-lF-MCR">
                             <rect key="frame" x="180" y="0.0" width="100" height="21"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <constraints>
@@ -121,18 +121,7 @@
                     </subviews>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     <constraints>
-                        <constraint firstItem="D0v-lF-MCR" firstAttribute="top" secondItem="AdU-ke-FMn" secondAttribute="top" id="Bjm-TJ-YqP"/>
-                        <constraint firstAttribute="width" constant="280" id="C8a-VG-12c"/>
-                        <constraint firstAttribute="bottom" secondItem="Yb9-9n-XDn" secondAttribute="bottom" id="Isl-F3-iUB"/>
-                        <constraint firstAttribute="bottom" secondItem="sSF-8X-ywL" secondAttribute="bottom" id="RYK-EZ-0PL"/>
-                        <constraint firstItem="Yb9-9n-XDn" firstAttribute="leading" secondItem="AdU-ke-FMn" secondAttribute="leading" id="TVk-HW-RQA"/>
-                        <constraint firstAttribute="height" constant="50" id="XIg-uq-Czm"/>
-                        <constraint firstItem="Wc9-N8-j94" firstAttribute="top" secondItem="AdU-ke-FMn" secondAttribute="top" id="Xc7-2u-DxK"/>
-                        <constraint firstAttribute="trailing" secondItem="sSF-8X-ywL" secondAttribute="trailing" id="Zrf-d6-U8w"/>
-                        <constraint firstItem="Wc9-N8-j94" firstAttribute="leading" secondItem="AdU-ke-FMn" secondAttribute="leading" id="jVN-Bi-xBP"/>
-                        <constraint firstItem="sSF-8X-ywL" firstAttribute="top" secondItem="AdU-ke-FMn" secondAttribute="top" constant="20" id="tsM-cG-slH"/>
-                        <constraint firstAttribute="trailing" secondItem="D0v-lF-MCR" secondAttribute="trailing" id="vA1-7v-d5b"/>
-                        <constraint firstItem="Yb9-9n-XDn" firstAttribute="top" secondItem="AdU-ke-FMn" secondAttribute="top" constant="20" id="wUF-QT-Zzf"/>
+                        <constraint firstAttribute="height" constant="50" id="Bd3-iS-9MK"/>
                     </constraints>
                 </view>
             </subviews>
@@ -141,13 +130,14 @@
                 <constraint firstItem="Abr-Kt-mu4" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="6bB-pJ-sYU"/>
                 <constraint firstItem="Abr-Kt-mu4" firstAttribute="top" secondItem="bjG-dD-reC" secondAttribute="bottom" constant="10" id="8T9-rl-KJF"/>
                 <constraint firstItem="M2m-Tq-SX3" firstAttribute="top" secondItem="rfk-KT-Ghw" secondAttribute="bottom" constant="14" id="9uB-Xr-fyG"/>
+                <constraint firstAttribute="trailing" secondItem="AdU-ke-FMn" secondAttribute="trailing" constant="20" id="Alt-Lc-Sge"/>
                 <constraint firstItem="rfk-KT-Ghw" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="Cta-H1-YFF"/>
+                <constraint firstItem="AdU-ke-FMn" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="20" id="DWo-29-RLy"/>
+                <constraint firstItem="rfk-KT-Ghw" firstAttribute="top" secondItem="AdU-ke-FMn" secondAttribute="bottom" constant="10" id="JQq-Ll-ZPi"/>
                 <constraint firstAttribute="trailing" secondItem="Abr-Kt-mu4" secondAttribute="trailing" id="TRH-f2-fsz"/>
                 <constraint firstAttribute="bottom" secondItem="Abr-Kt-mu4" secondAttribute="bottom" id="Uy3-R0-jLH"/>
-                <constraint firstAttribute="trailing" secondItem="AdU-ke-FMn" secondAttribute="trailing" constant="20" id="XjJ-Tn-LHq"/>
                 <constraint firstItem="bjG-dD-reC" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="20" id="j63-pI-C92"/>
                 <constraint firstAttribute="trailing" secondItem="M2m-Tq-SX3" secondAttribute="trailing" constant="20" id="lCN-U1-kFS"/>
-                <constraint firstItem="AdU-ke-FMn" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="50" id="wAU-nc-B8k"/>
                 <constraint firstAttribute="trailing" secondItem="rfk-KT-Ghw" secondAttribute="trailing" id="xfz-3b-ZeI"/>
                 <constraint firstItem="Abr-Kt-mu4" firstAttribute="top" secondItem="M2m-Tq-SX3" secondAttribute="bottom" constant="10" id="yJT-by-Y8F"/>
             </constraints>
