--- a/game4096/Classes/ViewControllers/HWGamePlayViewController.xib
+++ b/game4096/Classes/ViewControllers/HWGamePlayViewController.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="5053" systemVersion="13E28" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="5056" systemVersion="13E28" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment defaultVersion="1536" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
@@ -15,7 +15,6 @@
                 <outlet property="extraInfoView" destination="8bR-8f-E7p" id="hbD-Mi-uF6"/>
                 <outlet property="playView" destination="rfk-KT-Ghw" id="7gR-BZ-YqP"/>
                 <outlet property="scoreLabel" destination="Yb9-9n-XDn" id="aSz-tg-l8Y"/>
-                <outlet property="scrollExtracView" destination="06C-bb-5rW" id="h5g-eQ-MeF"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -101,22 +100,20 @@
                     <rect key="frame" x="0.0" y="50" width="320" height="98"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <subviews>
-                        <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="06C-bb-5rW">
-                            <rect key="frame" x="80" y="24" width="230" height="50"/>
-                            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                            <subviews>
-                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="The hottest 2048 game on the Apple Store" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="230" translatesAutoresizingMaskIntoConstraints="NO" id="02Y-Du-huP">
-                                    <rect key="frame" x="0.0" y="0.0" width="230" height="50"/>
-                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                    <fontDescription key="fontDescription" name="SavoyeLetPlain" family="Savoye LET" pointSize="20"/>
-                                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                    <nil key="highlightedColor"/>
-                                </label>
-                            </subviews>
-                        </scrollView>
-                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ApZ-sl-apH">
+                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="The hottest 2048 game on the Apple Store" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="02Y-Du-huP">
+                            <rect key="frame" x="80" y="20" width="230" height="58"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <fontDescription key="fontDescription" name="SavoyeLetPlain" family="Savoye LET" pointSize="40"/>
+                            <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ApZ-sl-apH">
                             <rect key="frame" x="10" y="19" width="60" height="60"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="60" id="06x-Zz-mF0"/>
+                                <constraint firstAttribute="width" constant="60" id="prP-7Q-9cF"/>
+                            </constraints>
                             <fontDescription key="fontDescription" name="SavoyeLetPlain" family="Savoye LET" pointSize="30"/>
                             <inset key="contentEdgeInsets" minX="0.0" minY="0.0" maxX="0.0" maxY="-9"/>
                             <state key="normal" title="Restart"/>
@@ -129,6 +126,14 @@
                         </button>
                     </subviews>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    <constraints>
+                        <constraint firstItem="02Y-Du-huP" firstAttribute="leading" secondItem="ApZ-sl-apH" secondAttribute="trailing" constant="10" id="9Ji-VD-FCp"/>
+                        <constraint firstAttribute="bottom" secondItem="02Y-Du-huP" secondAttribute="bottom" constant="20" id="HPU-z1-9ao"/>
+                        <constraint firstAttribute="trailing" secondItem="02Y-Du-huP" secondAttribute="trailing" constant="10" id="MdB-gM-rUI"/>
+                        <constraint firstItem="ApZ-sl-apH" firstAttribute="leading" secondItem="8bR-8f-E7p" secondAttribute="leading" constant="10" id="YZd-la-xG8"/>
+                        <constraint firstItem="02Y-Du-huP" firstAttribute="top" secondItem="8bR-8f-E7p" secondAttribute="top" constant="20" id="faK-4u-I6d"/>
+                        <constraint firstItem="ApZ-sl-apH" firstAttribute="top" secondItem="8bR-8f-E7p" secondAttribute="top" constant="19" id="v89-jo-ora"/>
+                    </constraints>
                 </view>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
