--- a/game4096/Classes/ViewControllers/HWGamePlayViewController.xib
+++ b/game4096/Classes/ViewControllers/HWGamePlayViewController.xib
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="5056" systemVersion="13E28" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="5053" systemVersion="13E28" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
-        <deployment defaultVersion="1536" identifier="iOS"/>
+        <deployment defaultVersion="1792" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
     </dependencies>
@@ -11,6 +11,7 @@
                 <outlet property="adBannerBotView" destination="Abr-Kt-mu4" id="I7u-dr-oUs"/>
                 <outlet property="adBannerTopView" destination="UEM-pc-SRz" id="LNg-Zl-NfS"/>
                 <outlet property="bestScoreLabel" destination="sSF-8X-ywL" id="veU-hp-SQX"/>
+                <outlet property="btnRank" destination="Zaq-oQ-sON" id="Hex-VY-Kv8"/>
                 <outlet property="btnRestart" destination="ApZ-sl-apH" id="GZI-ja-Eu0"/>
                 <outlet property="extraInfoView" destination="8bR-8f-E7p" id="hbD-Mi-uF6"/>
                 <outlet property="playView" destination="rfk-KT-Ghw" id="7gR-BZ-YqP"/>
@@ -122,6 +123,18 @@
                             </state>
                             <connections>
                                 <action selector="restartTapped:" destination="-1" eventType="touchUpInside" id="3nq-KR-1xg"/>
+                            </connections>
+                        </button>
+                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Zaq-oQ-sON">
+                            <rect key="frame" x="260" y="60" width="50" height="30"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <fontDescription key="fontDescription" name="SavoyeLetPlain" family="Savoye LET" pointSize="18"/>
+                            <inset key="contentEdgeInsets" minX="0.0" minY="0.0" maxX="0.0" maxY="-5"/>
+                            <state key="normal" title="Rank">
+                                <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                            </state>
+                            <connections>
+                                <action selector="btnRankTapped:" destination="-1" eventType="touchUpInside" id="k62-RR-dX6"/>
                             </connections>
                         </button>
                     </subviews>
