sexy man version 1.0

--- a/game4096/Classes/ViewControllers/HWGamePlayViewController.xib
+++ b/game4096/Classes/ViewControllers/HWGamePlayViewController.xib
@@ -98,7 +98,7 @@
                                 <action selector="btnRankTapped:" destination="-1" eventType="touchUpInside" id="k62-RR-dX6"/>
                             </connections>
                         </button>
-                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rKv-QJ-WsV">
+                        <button hidden="YES" opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rKv-QJ-WsV">
                             <rect key="frame" x="27" y="60" width="40" height="30"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <fontDescription key="fontDescription" name="SavoyeLetPlain" family="Savoye LET" pointSize="18"/>
