--- a/game4096/Classes/ViewControllers/HWSettingViewController.xib
+++ b/game4096/Classes/ViewControllers/HWSettingViewController.xib
@@ -7,6 +7,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="HWSettingViewController">
             <connections>
+                <outlet property="btnRemoveAd" destination="EmW-5o-GDF" id="yxq-SL-HBb"/>
                 <outlet property="switchSoundOption" destination="WKq-kA-Apr" id="M2h-wI-4fc"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
@@ -54,6 +55,9 @@
                     <color key="backgroundColor" red="0.16584678140714615" green="0.62825148400710384" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                     <fontDescription key="fontDescription" type="system" pointSize="16"/>
                     <state key="normal" title="Remove Ad"/>
+                    <state key="disabled">
+                        <color key="titleColor" red="0.93388310185185186" green="0.93388310185185186" blue="0.93388310185185186" alpha="0.65000000000000002" colorSpace="calibratedRGB"/>
+                    </state>
                     <state key="highlighted">
                         <color key="titleColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
